fixed stuff in VISAR ui (hope this fix crashes) and some delete added in nphysformats

--- a/UIs/nWavelet.ui
+++ b/UIs/nWavelet.ui
@@ -593,6 +593,16 @@
              </property>
             </widget>
            </item>
+           <item row="1" column="0">
+            <widget class="QDoubleSpinBox" name="phaseOffset">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
           </layout>
          </widget>
         </item>
