--- a/UIs/nWavelet.ui
+++ b/UIs/nWavelet.ui
@@ -55,7 +55,7 @@
        </font>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <property name="neutrinoSave" stdset="0">
        <bool>true</bool>
@@ -539,7 +539,7 @@
            <property name="margin">
             <number>0</number>
            </property>
-           <item row="1" column="0">
+           <item row="0" column="0">
             <widget class="QPushButton" name="doUnwrap">
              <property name="font">
               <font>
@@ -551,7 +551,7 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="1">
+           <item row="0" column="1">
             <widget class="QCheckBox" name="erasePreviousUnwrap">
              <property name="enabled">
               <bool>false</bool>
@@ -561,16 +561,6 @@
              </property>
              <property name="checked">
               <bool>true</bool>
-             </property>
-             <property name="neutrinoSave" stdset="0">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0">
-            <widget class="QCheckBox" name="removeCarrierAfterUnwrap">
-             <property name="text">
-              <string>remove carrier</string>
              </property>
              <property name="neutrinoSave" stdset="0">
               <bool>true</bool>
@@ -867,8 +857,6 @@
         </item>
        </layout>
        <zorder>groupBox_2</zorder>
-       <zorder>radioButton_2</zorder>
-       <zorder>radioButton</zorder>
        <zorder>widget_4</zorder>
        <zorder>widget_5</zorder>
        <zorder>verticalSpacer_3</zorder>
@@ -897,9 +885,10 @@
    <addaction name="actionLoadPref"/>
    <addaction name="actionSavePref"/>
    <addaction name="separator"/>
-   <addaction name="actionCarrier"/>
-   <addaction name="separator"/>
    <addaction name="actionRect"/>
+   <addaction name="separator"/>
+   <addaction name="actionCarrier"/>
+   <addaction name="actionDoAll"/>
   </widget>
   <action name="actionRect">
    <property name="icon">
@@ -947,6 +936,18 @@
    </property>
    <property name="toolTip">
     <string>Guess carrier interfringe and angle</string>
+   </property>
+  </action>
+  <action name="actionDoAll">
+   <property name="icon">
+    <iconset resource="../resources/neutrino.qrc">
+     <normaloff>:/icons/autoRefresh.png</normaloff>:/icons/autoRefresh.png</iconset>
+   </property>
+   <property name="text">
+    <string>doAll</string>
+   </property>
+   <property name="toolTip">
+    <string>Wavelet, unwrap and subtract</string>
    </property>
   </action>
  </widget>
