--- a/UIs/nWavelet.ui
+++ b/UIs/nWavelet.ui
@@ -429,19 +429,6 @@
         <property name="margin">
          <number>0</number>
         </property>
-        <item row="3" column="0">
-         <spacer name="verticalSpacer">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
         <item row="0" column="0">
          <widget class="QGroupBox" name="groupBox_13">
           <property name="title">
@@ -476,6 +463,19 @@
            </item>
           </layout>
          </widget>
+        </item>
+        <item row="3" column="0">
+         <spacer name="verticalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
         </item>
         <item row="1" column="0">
          <widget class="QGroupBox" name="methodBox">
@@ -539,7 +539,7 @@
            <property name="margin">
             <number>0</number>
            </property>
-           <item row="0" column="0">
+           <item row="1" column="0">
             <widget class="QPushButton" name="doUnwrap">
              <property name="font">
               <font>
@@ -551,7 +551,7 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
+           <item row="1" column="1">
             <widget class="QCheckBox" name="erasePreviousUnwrap">
              <property name="enabled">
               <bool>false</bool>
@@ -561,6 +561,16 @@
              </property>
              <property name="checked">
               <bool>true</bool>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QCheckBox" name="removeCarrierAfterUnwrap">
+             <property name="text">
+              <string>remove carrier</string>
              </property>
              <property name="neutrinoSave" stdset="0">
               <bool>true</bool>
@@ -947,7 +957,7 @@
     <string>doAll</string>
    </property>
    <property name="toolTip">
-    <string>Wavelet, unwrap and subtract</string>
+    <string>Wavelet, unwrap</string>
    </property>
   </action>
  </widget>
