--- a/UIs/nColorBarWin.ui
+++ b/UIs/nColorBarWin.ui
@@ -31,7 +31,7 @@
      <number>4</number>
     </property>
     <item row="0" column="0">
-     <widget class="QTabWidget" name="tabWidget">
+     <widget class="QTabWidget" name="colorbarTabs">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
@@ -491,7 +491,7 @@
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>tabWidget</tabstop>
+  <tabstop>colorbarTabs</tabstop>
   <tabstop>comboBox</tabstop>
   <tabstop>invert</tabstop>
   <tabstop>checkBox</tabstop>
