--- a/UIs/nColorBarWin.ui
+++ b/UIs/nColorBarWin.ui
@@ -154,10 +154,13 @@
               </font>
              </property>
              <property name="maximum">
-              <number>100</number>
+              <number>10000</number>
+             </property>
+             <property name="pageStep">
+              <number>1000</number>
              </property>
              <property name="value">
-              <number>100</number>
+              <number>10000</number>
              </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
@@ -196,7 +199,7 @@
               </font>
              </property>
              <property name="maximum">
-              <number>100</number>
+              <number>10000</number>
              </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
