--- a/UIs/nShortcuts.ui
+++ b/UIs/nShortcuts.ui
@@ -29,6 +29,11 @@
     </property>
     <item row="0" column="0">
      <widget class="QTextBrowser" name="textBrowser">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
       <property name="readOnly">
        <bool>true</bool>
       </property>
