--- a/UIs/nWinList.ui
+++ b/UIs/nWinList.ui
@@ -23,7 +23,7 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0">
+   <layout class="QGridLayout" name="gridLayout" rowstretch="0,1,0">
     <property name="margin">
      <number>0</number>
     </property>
@@ -157,17 +157,20 @@
      </widget>
     </item>
     <item row="2" column="0">
-     <widget class="QLabel" name="line">
+     <widget class="QLineEdit" name="lineEdit">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="font">
        <font>
         <pointsize>10</pointsize>
        </font>
       </property>
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-      <property name="textInteractionFlags">
-       <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+      <property name="readOnly">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
