--- a/UIs/nMouseInfo.ui
+++ b/UIs/nMouseInfo.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>335</width>
-    <height>265</height>
+    <width>361</width>
+    <height>267</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -166,16 +166,7 @@
            <string>Colors</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_11">
-           <property name="leftMargin">
-            <number>4</number>
-           </property>
-           <property name="topMargin">
-            <number>4</number>
-           </property>
-           <property name="rightMargin">
-            <number>4</number>
-           </property>
-           <property name="bottomMargin">
+           <property name="margin">
             <number>0</number>
            </property>
            <item row="0" column="0">
@@ -198,7 +189,7 @@
               </font>
              </property>
              <property name="text">
-              <string>Ruler</string>
+              <string>Ruler/grid</string>
              </property>
             </widget>
            </item>
@@ -443,8 +434,8 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../resources/neutrino.qrc">
-            <normaloff>:icons//remove.png</normaloff>:icons/remove</iconset>
+           <iconset>
+            <normaloff>:icons//remove.png</normaloff>:icons//remove.png</iconset>
           </property>
           <property name="iconSize">
            <size>
@@ -460,8 +451,8 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../resources/neutrino.qrc">
-            <normaloff>:icons//saveClipboard.png</normaloff>:icons/saveClipboard</iconset>
+           <iconset>
+            <normaloff>:icons//saveClipboard.png</normaloff>:icons//saveClipboard.png</iconset>
           </property>
           <property name="iconSize">
            <size>
@@ -477,8 +468,8 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../resources/neutrino.qrc">
-            <normaloff>:icons//saveTxt.png</normaloff>:icons/saveTxt</iconset>
+           <iconset>
+            <normaloff>:icons//saveTxt.png</normaloff>:icons//saveTxt.png</iconset>
           </property>
           <property name="iconSize">
            <size>
