--- a/UIs/nWinList.ui
+++ b/UIs/nWinList.ui
@@ -23,7 +23,10 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout" rowstretch="0,1,0">
+   <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0">
+    <property name="verticalSpacing">
+     <number>0</number>
+    </property>
     <property name="margin">
      <number>0</number>
     </property>
@@ -158,19 +161,10 @@
     </item>
     <item row="2" column="0">
      <widget class="QLineEdit" name="lineEdit">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
       <property name="font">
        <font>
         <pointsize>10</pointsize>
        </font>
-      </property>
-      <property name="readOnly">
-       <bool>true</bool>
       </property>
      </widget>
     </item>
