--- a/UIs/neutrino.ui
+++ b/UIs/neutrino.ui
@@ -147,8 +147,9 @@
     <addaction name="actionCycle_over_paths"/>
     <addaction name="separator"/>
     <addaction name="actionFollower"/>
-    <addaction name="actionShow_Mouse"/>
-    <addaction name="actionShow_Ruler"/>
+    <addaction name="actionShow_mouse"/>
+    <addaction name="actionShow_ruler"/>
+    <addaction name="actionShow_grid"/>
     <addaction name="separator"/>
     <addaction name="menuTransformation"/>
    </widget>
@@ -232,7 +233,7 @@
    <addaction name="actionColors"/>
    <addaction name="actionFlipRotate"/>
    <addaction name="actionPaths"/>
-   <addaction name="actionRuler"/>
+   <addaction name="actionMouseInfo"/>
    <addaction name="separator"/>
    <addaction name="actionLineoutH"/>
    <addaction name="actionLineoutV"/>
@@ -488,12 +489,12 @@
     <string>Inversions</string>
    </property>
   </action>
-  <action name="actionShow_Ruler">
+  <action name="actionShow_ruler">
    <property name="text">
     <string>Show ruler</string>
    </property>
   </action>
-  <action name="actionShow_Mouse">
+  <action name="actionShow_mouse">
    <property name="text">
     <string>Show mouse</string>
    </property>
@@ -522,7 +523,7 @@
     <string>Color table</string>
    </property>
   </action>
-  <action name="actionRuler">
+  <action name="actionMouseInfo">
    <property name="icon">
     <iconset>
      <normaloff>:icons//ruler.png</normaloff>:icons//ruler.png</iconset>
@@ -818,6 +819,11 @@
   <action name="actionKeyborard_shortcuts">
    <property name="text">
     <string>Keyborard shortcuts</string>
+   </property>
+  </action>
+  <action name="actionShow_grid">
+   <property name="text">
+    <string>Show grid</string>
    </property>
   </action>
  </widget>
