--- a/UIs/nWavelet.ui
+++ b/UIs/nWavelet.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>302</width>
-    <height>381</height>
+    <height>390</height>
    </rect>
   </property>
   <property name="font">
@@ -407,25 +407,22 @@
          </widget>
         </item>
         <item row="4" column="0">
-         <spacer name="verticalSpacer_2">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="3" column="0">
          <widget class="QCheckBox" name="synthetic">
           <property name="text">
            <string>Synthetic interferogram</string>
           </property>
           <property name="neutrinoSave" stdset="0">
            <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QCheckBox" name="showSource">
+          <property name="text">
+           <string>Source region</string>
+          </property>
+          <property name="neutrinoSave" stdset="0">
+           <bool>false</bool>
           </property>
          </widget>
         </item>
