--- a/UIs/nWavelet.ui
+++ b/UIs/nWavelet.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>302</width>
-    <height>390</height>
+    <height>392</height>
    </rect>
   </property>
   <property name="font">
@@ -597,7 +597,7 @@
         <property name="margin">
          <number>0</number>
         </property>
-        <item row="3" column="0">
+        <item row="4" column="0">
          <widget class="QWidget" name="widget_5" native="true">
           <layout class="QGridLayout" name="gridLayout_15">
            <property name="margin">
@@ -775,7 +775,7 @@
            <item row="1" column="1">
             <widget class="QGroupBox" name="groupBox_3">
              <property name="title">
-              <string>Reference</string>
+              <string>Reference phase/2pi</string>
              </property>
              <layout class="QGridLayout" name="gridLayout_8">
               <property name="leftMargin">
@@ -859,7 +859,7 @@
           </layout>
          </widget>
         </item>
-        <item row="2" column="0">
+        <item row="3" column="0">
          <spacer name="verticalSpacer_3">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -872,11 +872,50 @@
           </property>
          </spacer>
         </item>
+        <item row="2" column="0">
+         <widget class="QWidget" name="widget_6" native="true">
+          <property name="neutirnoSave" stdset="0">
+           <bool>true</bool>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_18" columnstretch="0,1">
+           <property name="margin">
+            <number>0</number>
+           </property>
+           <item row="0" column="0">
+            <widget class="QCheckBox" name="blur">
+             <property name="text">
+              <string>Blur</string>
+             </property>
+             <property name="tristate">
+              <bool>false</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QDoubleSpinBox" name="blurVal">
+             <property name="suffix">
+              <string>[px]</string>
+             </property>
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="value">
+              <double>1.000000000000000</double>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
        </layout>
        <zorder>groupBox_2</zorder>
        <zorder>widget_4</zorder>
        <zorder>widget_5</zorder>
        <zorder>verticalSpacer_3</zorder>
+       <zorder>widget_6</zorder>
       </widget>
      </widget>
     </item>
