fixed HDF5 scanbrightness

--- a/UIs/nShortcuts.ui
+++ b/UIs/nShortcuts.ui
@@ -37,6 +37,9 @@
       <property name="readOnly">
        <bool>true</bool>
       </property>
+      <property name="openExternalLinks">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
    </layout>
