--- a/UIs/nWavelet.ui
+++ b/UIs/nWavelet.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>302</width>
-    <height>392</height>
+    <height>388</height>
    </rect>
   </property>
   <property name="font">
@@ -41,7 +41,7 @@
     <property name="bottomMargin">
      <number>0</number>
     </property>
-    <item row="0" column="1">
+    <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="sizeIncrement">
        <size>
@@ -369,7 +369,7 @@
           </layout>
          </widget>
         </item>
-        <item row="5" column="0">
+        <item row="6" column="0">
          <widget class="QWidget" name="widget_3" native="true">
           <layout class="QGridLayout" name="gridLayout_2">
            <property name="margin">
@@ -406,25 +406,47 @@
           </layout>
          </widget>
         </item>
-        <item row="4" column="0">
-         <widget class="QCheckBox" name="synthetic">
-          <property name="text">
-           <string>Synthetic interferogram</string>
-          </property>
-          <property name="neutrinoSave" stdset="0">
-           <bool>true</bool>
-          </property>
+        <item row="3" column="0">
+         <widget class="QWidget" name="widget_7" native="true">
+          <layout class="QGridLayout" name="gridLayout_19">
+           <property name="margin">
+            <number>0</number>
+           </property>
+           <item row="0" column="0">
+            <widget class="QCheckBox" name="showSource">
+             <property name="text">
+              <string>crop region</string>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QCheckBox" name="synthetic">
+             <property name="text">
+              <string>synthetic</string>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </widget>
         </item>
-        <item row="3" column="0">
-         <widget class="QCheckBox" name="showSource">
-          <property name="text">
-           <string>Source region</string>
+        <item row="4" column="0">
+         <spacer name="verticalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
           </property>
-          <property name="neutrinoSave" stdset="0">
-           <bool>false</bool>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
           </property>
-         </widget>
+         </spacer>
         </item>
        </layout>
       </widget>
@@ -489,17 +511,8 @@
           <property name="title">
            <string>Method</string>
           </property>
-          <layout class="QGridLayout" name="gridLayout_5">
-           <property name="leftMargin">
-            <number>0</number>
-           </property>
-           <property name="topMargin">
-            <number>4</number>
-           </property>
-           <property name="rightMargin">
-            <number>0</number>
-           </property>
-           <property name="bottomMargin">
+          <layout class="QGridLayout" name="gridLayout_5" columnstretch="1,0,0">
+           <property name="margin">
             <number>0</number>
            </property>
            <item row="0" column="0">
@@ -535,6 +548,27 @@
                <string>Quality</string>
               </property>
              </item>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QCheckBox" name="useBarrier">
+             <property name="text">
+              <string/>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="2">
+            <widget class="QToolButton" name="lineBarrier">
+             <property name="text">
+              <string>...</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../resources/neutrino.qrc">
+               <normaloff>:/icons/line.png</normaloff>:/icons/line.png</iconset>
+             </property>
             </widget>
            </item>
           </layout>
@@ -877,33 +911,10 @@
           <property name="neutirnoSave" stdset="0">
            <bool>true</bool>
           </property>
-          <layout class="QGridLayout" name="gridLayout_18" columnstretch="0,1">
+          <layout class="QGridLayout" name="gridLayout_18" columnstretch="0">
            <property name="margin">
             <number>0</number>
            </property>
-           <item row="0" column="0">
-            <widget class="QCheckBox" name="blur">
-             <property name="text">
-              <string>Blur</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="QDoubleSpinBox" name="blurVal">
-             <property name="suffix">
-              <string>[px]</string>
-             </property>
-             <property name="decimals">
-              <number>3</number>
-             </property>
-             <property name="value">
-              <double>1.000000000000000</double>
-             </property>
-             <property name="neutrinoSave" stdset="0">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
           </layout>
          </widget>
         </item>
