--- a/UIs/nAffine.ui
+++ b/UIs/nAffine.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>215</width>
-    <height>242</height>
+    <width>189</width>
+    <height>263</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,85 +23,151 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_3" columnstretch="1,1">
-    <property name="leftMargin">
-     <number>0</number>
-    </property>
-    <property name="topMargin">
+   <layout class="QGridLayout" name="gridLayout_4">
+    <property name="margin">
      <number>4</number>
     </property>
-    <property name="rightMargin">
-     <number>0</number>
-    </property>
-    <property name="bottomMargin">
-     <number>4</number>
-    </property>
-    <item row="3" column="0" colspan="2">
-     <widget class="QGroupBox" name="groupBox_2">
+    <item row="3" column="1">
+     <widget class="QPushButton" name="second">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
        </font>
       </property>
-      <property name="title">
-       <string>Affine matrix</string>
+      <property name="text">
+       <string>Second</string>
       </property>
-      <layout class="QGridLayout" name="gridLayout_2">
-       <property name="leftMargin">
-        <number>4</number>
-       </property>
-       <property name="topMargin">
-        <number>0</number>
-       </property>
-       <property name="rightMargin">
-        <number>4</number>
-       </property>
-       <property name="bottomMargin">
-        <number>0</number>
-       </property>
-       <item row="2" column="0">
-        <widget class="QLineEdit" name="A10">
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLineEdit" name="A01">
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QLineEdit" name="A00">
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="2">
-        <widget class="QLineEdit" name="A02">
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QLineEdit" name="A11">
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="2">
-        <widget class="QLineEdit" name="A12">
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-      </layout>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QPushButton" name="first">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>First</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0" colspan="2">
+     <widget class="QTabWidget" name="tabWidget">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
+      <property name="movable">
+       <bool>false</bool>
+      </property>
+      <widget class="QWidget" name="forward">
+       <attribute name="title">
+        <string>forward</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_3">
+        <property name="margin">
+         <number>0</number>
+        </property>
+        <item row="0" column="0">
+         <widget class="QLineEdit" name="A00">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QLineEdit" name="A02">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="A01">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLineEdit" name="A10">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QLineEdit" name="A12">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="A11">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="backward">
+       <attribute name="title">
+        <string>backward</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <property name="margin">
+         <number>0</number>
+        </property>
+        <item row="0" column="0">
+         <widget class="QLineEdit" name="B00">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="B01">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QLineEdit" name="B02">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLineEdit" name="B10">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="B11">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QLineEdit" name="B12">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </item>
     <item row="0" column="0" colspan="2">
@@ -110,16 +176,7 @@
        <string>Images</string>
       </property>
       <layout class="QGridLayout" name="gridLayout">
-       <property name="leftMargin">
-        <number>0</number>
-       </property>
-       <property name="topMargin">
-        <number>4</number>
-       </property>
-       <property name="rightMargin">
-        <number>4</number>
-       </property>
-       <property name="bottomMargin">
+       <property name="margin">
         <number>0</number>
        </property>
        <item row="0" column="0">
@@ -171,19 +228,7 @@
       </layout>
      </widget>
     </item>
-    <item row="5" column="0">
-     <widget class="QPushButton" name="first">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>First</string>
-      </property>
-     </widget>
-    </item>
-    <item row="6" column="0">
+    <item row="2" column="0">
      <widget class="QComboBox" name="defaultValue">
       <property name="font">
        <font>
@@ -220,7 +265,7 @@
       </item>
      </widget>
     </item>
-    <item row="6" column="1">
+    <item row="2" column="1">
      <widget class="QCheckBox" name="erasePrevious">
       <property name="font">
        <font>
@@ -230,17 +275,8 @@
       <property name="text">
        <string>erase previous</string>
       </property>
-     </widget>
-    </item>
-    <item row="5" column="1">
-     <widget class="QPushButton" name="second">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Second</string>
+      <property name="neutrinoSave" stdset="0">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
@@ -252,16 +288,21 @@
   <tabstop>image2</tabstop>
   <tabstop>line1</tabstop>
   <tabstop>line2</tabstop>
+  <tabstop>tabWidget</tabstop>
   <tabstop>A00</tabstop>
-  <tabstop>A10</tabstop>
   <tabstop>A01</tabstop>
-  <tabstop>A11</tabstop>
   <tabstop>A02</tabstop>
+  <tabstop>A10</tabstop>
+  <tabstop>A11</tabstop>
   <tabstop>A12</tabstop>
   <tabstop>first</tabstop>
   <tabstop>second</tabstop>
-  <tabstop>defaultValue</tabstop>
-  <tabstop>erasePrevious</tabstop>
+  <tabstop>B00</tabstop>
+  <tabstop>B01</tabstop>
+  <tabstop>B02</tabstop>
+  <tabstop>B10</tabstop>
+  <tabstop>B11</tabstop>
+  <tabstop>B12</tabstop>
  </tabstops>
  <resources>
   <include location="../resources/neutrino.qrc"/>
