--- a/UIs/nFocalSpot.ui
+++ b/UIs/nFocalSpot.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>279</width>
-    <height>321</height>
+    <width>213</width>
+    <height>221</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,7 +28,7 @@
      <widget class="QTabWidget" name="tabWidget">
       <property name="font">
        <font>
-        <pointsize>9</pointsize>
+        <pointsize>10</pointsize>
        </font>
       </property>
       <property name="currentIndex">
@@ -39,8 +39,16 @@
         <string>Analysis</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_2">
+        <property name="margin">
+         <number>4</number>
+        </property>
         <item row="1" column="0" colspan="2">
          <widget class="QLabel" name="label_4">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>Check Level</string>
           </property>
@@ -48,6 +56,11 @@
         </item>
         <item row="1" column="2" colspan="2">
          <widget class="QDoubleSpinBox" name="check_dsb">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="decimals">
            <number>4</number>
           </property>
@@ -64,6 +77,11 @@
         </item>
         <item row="0" column="2" colspan="2">
          <widget class="QDoubleSpinBox" name="zero_dsb">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="maximum">
            <double>999999999.000000000000000</double>
           </property>
@@ -74,6 +92,11 @@
         </item>
         <item row="0" column="0" colspan="2">
          <widget class="QLabel" name="label_2">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>Zero Level:</string>
           </property>
@@ -81,6 +104,11 @@
         </item>
         <item row="2" column="0" colspan="4">
          <widget class="Line" name="line">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
@@ -88,6 +116,11 @@
         </item>
         <item row="4" column="0">
          <widget class="QLabel" name="label">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>Centroid: </string>
           </property>
@@ -510,6 +543,11 @@
             </disabled>
            </palette>
           </property>
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="frameShape">
            <enum>QFrame::Box</enum>
           </property>
@@ -526,6 +564,11 @@
         </item>
         <item row="5" column="0">
          <widget class="QLabel" name="label_6">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>Integral:</string>
           </property>
@@ -533,6 +576,11 @@
         </item>
         <item row="5" column="2" colspan="2">
          <widget class="QLabel" name="integral_lbl">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="frameShape">
            <enum>QFrame::Box</enum>
           </property>
@@ -554,6 +602,9 @@
         <string>Parameters</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_3">
+        <property name="margin">
+         <number>4</number>
+        </property>
         <item row="0" column="1" colspan="2">
          <widget class="QDoubleSpinBox" name="doubleSpinBox">
           <property name="value">
