small fix in neutrino.qrc

--- a/resources/neutrino.qrc
+++ b/resources/neutrino.qrc
@@ -74,7 +74,7 @@
         <file>icons/savePref.png</file>
         <file>icons/loadPref.png</file>
         <file>icons/refresh.png</file>
-        <file>icons/refresh2.svg</file>
+        <file>icons/refresh2.png</file>
         <file>icons/savePDF.png</file>
         <file>icons/info.png</file>
         <file>icons/center.png</file>
