--- a/UIs/nVISAR2.ui
+++ b/UIs/nVISAR2.ui
@@ -115,7 +115,7 @@
         </property>
         <property name="icon">
          <iconset resource="../resources/neutrino.qrc">
-          <normaloff>:/icons/refresh2.svg</normaloff>:/icons/refresh2.svg</iconset>
+          <normaloff>:/icons/refresh2.png</normaloff>:/icons/refresh2.png</iconset>
         </property>
        </widget>
       </item>
