--- a/UIs/nWavelet.ui
+++ b/UIs/nWavelet.ui
@@ -995,7 +995,7 @@
   <action name="actionCarrier">
    <property name="icon">
     <iconset resource="../resources/neutrino.qrc">
-     <normaloff>:/icons/refresh2.svg</normaloff>:/icons/refresh2.svg</iconset>
+     <normaloff>:/icons/refresh2.png</normaloff>:/icons/refresh2.png</iconset>
    </property>
    <property name="text">
     <string>Carrier</string>
